--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "lib/highlights.js",
   "scripts": {
     "test": "grunt test",
+    "nyc": "nyc --extension .coffee --exclude 'spec/**' jasmine-focused --captureExceptions --coffee spec",
     "prepublish": "grunt prepublish",
     "pretest": "git submodule update --init --recursive",
     "version": "standard-version"
@@ -36,6 +37,7 @@
     "grunt-shell": "^1.3.0",
     "jasmine-focused": "^1.0.4",
     "language-erlang": "^2.0.0",
+    "nyc": "^10.1.2",
     "standard-version": "^2.3.1"
   }
 }
